Basic session creation

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,6 @@
 [tox]
 envlist = py34, py35, lint
-
-[testenv:lint]
-basepython=python3
-deps=flake8
-commands=
-    flake8 aioautomatic
-    flake8 tests
-    pylint aioautomatic
+skip_missing_interpreters = True
 
 [testenv]
 setenv =
@@ -17,3 +10,11 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
+
+[testenv:lint]
+basepython=python3
+ignore_errors = True
+commands=
+    flake8 aioautomatic
+    flake8 tests
+    pylint aioautomatic
