--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir}
+    py.test --basetemp={envtmpdir} --cov
 
 [testenv:lint]
 basepython=python3
