Update supported versions of python

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,9 @@
 [tox]
-envlist = py34, py35, py36, lint
+envlist =
+    py35,
+    py36,
+    py37,
+    py38,
 skip_missing_interpreters = True
 
 [testenv]
@@ -9,7 +13,7 @@ deps =
     -r{toxinidir}/requirements_dev.txt
 commands =
     pip install -U pip
-    py.test --basetemp={envtmpdir} --cov --cov-report term-missing
+    py.test --basetemp={envtmpdir} --cov=aioautomatic --cov-report term-missing
 
 [testenv:lint]
 basepython=python3
